--- a/gh-actions/go/code-quality/action.yaml
+++ b/gh-actions/go/code-quality/action.yaml
@@ -11,6 +11,9 @@ inputs:
   golangci-lint-configfile:
     description: Which config file to check for golangci-lint
     default: ".golangci-lint"
+  generate-diff-to-ignore:
+    description: Files and paths to ignore when checking if generated files changed. This is passed to git update-index.
+    default: po/* doc/*.md README.md
 
 runs:
   using: "composite"
@@ -85,6 +88,23 @@ runs:
       id: gomod-check
       # https://github.com/orgs/community/discussions/25246
       uses: canonical/desktop-engineering/gh-actions/common/has-diff@reusable-actions
+
+    - name: Regenerate files with go generate
+      if: ${{ always() && steps.go-version.outcome == 'success' }}
+      id: go-generate-run
+      run: |
+        echo Regenerate files with go generate
+        set -eu
+
+        go generate ./...
+      shell: bash
+    - name: Ensure there is no diff between current and generated files
+      if: ${{ always() && steps.go-generate-run.outcome == 'success' }}
+      id: go-generate-check
+      # https://github.com/orgs/community/discussions/25246
+      uses: canonical/desktop-engineering/gh-actions/common/has-diff@reusable-actions
+      with:
+        to-ignore: ${{ inputs.generate-diff-to-ignore }}
 
     - name: Build any binaries
       if: ${{ always() && steps.go-version.outcome == 'success' }}
@@ -168,5 +188,6 @@ runs:
         step-results: |
           ${{ steps.golangci-lint-check.outcome }} Linting
           ${{ steps.gomod-check.outcome }} Go module files up to date
+          ${{ steps.go-generate-check.outcome }} Generated files up to date
           ${{ steps.build-check.outcome }} Build
           ${{ steps.vulnerabilities-check.outcome }} Vulnerability scanning
