fix: Always use the latest minor Go version
The setup-go is not always up to date with latest minor Go version, even
few days after.
Ensure we always use the latest one.

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -21,6 +21,8 @@ runs:
     - uses: actions/setup-go@v4
       with:
         go-version-file: go.mod
+        check-latest: true
+        cache: false
     - name: Detect go version to use
       id: go-version
       run: |
