fix(gh-actions): build script execution
Use cat for special characters and other content in build script
execution to be more permissive.

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -107,10 +107,12 @@ runs:
         echo Build any binaries
         set -eu
 
-        if [ -n "${{ inputs.go-build-script}}" ]; then
+        if [ -n "${{ inputs.go-build-script }}" ]; then
           buildTest=$(mktemp)
-          echo "${{ inputs.go-build-script}}" > ${buildTest}
-          ./${buildTest}
+          cat > ${buildTest} <<SCRIPTEOF
+            ${{ inputs.go-build-script }}
+        SCRIPTEOF
+          bash ${buildTest}
           exit 0
         fi
 
