fix(gh-actions): missing dependency to always run generate

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -95,6 +95,7 @@ runs:
       uses: canonical/desktop-engineering/gh-actions/common/has-diff@main
 
     - name: Ensure there is no diff between current and generated files
+      if: ${{ always() && steps.go-version.outcome == 'success' }}
       id: go-generate-check
       # https://github.com/orgs/community/discussions/25246
       uses: canonical/desktop-engineering/gh-actions/go/generate@main
