fix(gh-actions): pass generate diff options to go generate

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -101,6 +101,7 @@ runs:
       uses: canonical/desktop-engineering/gh-actions/go/generate@main
       with:
         tools-directory: ${{ inputs.tools-directory }}
+        paths-to-ignore: ${{ inputs.generate-diff-paths-to-ignore }}
 
     - name: Build any binaries
       if: ${{ always() && steps.go-version.outcome == 'success' }}
