--- a/gh-actions/common/has-diff/action.yml
+++ b/gh-actions/common/has-diff/action.yml
@@ -8,7 +8,7 @@ inputs:
     description: Files and paths to ignore when checking if they changed. This is passed to git update-index.
   fail-on-diff:
     description: Fail the job on any detected diff.
-    default: "true"
+    default: "false"
 outputs:
   diff:
     description: Returns if there is a local diff.
