fix(gh-actions) Returns output correctly from inside steps
On composite actions, those information needs to be explicitely
referencing the correct step to reexport the output content.

--- a/gh-actions/common/has-diff/action.yml
+++ b/gh-actions/common/has-diff/action.yml
@@ -12,11 +12,13 @@ inputs:
 outputs:
   diff:
     description: Returns if there is a local diff.
+    value: ${{ steps.has-diff.outputs.diff }}
 
 runs:
   using: "composite"
   steps:
     - name: Returns if there is a local diff
+      id: has-diff
       shell: bash
       run: |
         echo Returns if there is a local diff
