--- a/gh-actions/common/print-summary/action.yml
+++ b/gh-actions/common/print-summary/action.yml
@@ -33,7 +33,7 @@ runs:
           echo "| $2 | ${icon} |" >> $GITHUB_STEP_SUMMARY
         }
 
-        echo "### ${{ inputs.title }}" >> $GITHUB_STEP_SUMMARY
+        echo '### ${{ inputs.title }}' >> $GITHUB_STEP_SUMMARY
 
         echo "| Job | Status |" >> $GITHUB_STEP_SUMMARY
         echo "| --- | :---:  |" >> $GITHUB_STEP_SUMMARY
@@ -52,4 +52,4 @@ runs:
             res=${jobResult%%" "*}
             name=${jobResult#*" "}
             print_status_line "${res}" "${name}"
-        done <<< "${{ inputs.step-results }}"
+        done <<< '${{ inputs.step-results }}'
