Avoid using ${{ runner.temp }} in bash scripts
When running on windows, the backslashes in the path are ignored by bash
and so the script fails.

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -182,12 +182,11 @@ runs:
     - name: Installing govulncheck
       if: ${{ always() && steps.tooling-version.outcome == 'success' }}
       id: install-govulncheck
-      working-directory: ${{ inputs.working-directory }}
+      working-directory: ${{ runner.temp }}
       run: |
         echo Installing govulncheck
         set -eu
 
-        cd ${{ runner.temp }}
         go install golang.org/x/vuln/cmd/govulncheck@${{ steps.tooling-version.outputs.vulncheck }}
       shell: bash
     - name: Known vulnerabilities check
