--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -106,7 +106,12 @@ runs:
         artifacts-dir: ${{ env.BUILD_OUTPUT_DIR }}
         source-dir: ${{ env.BUILD_INPUT_DIR }}
         docker-image: ${{ inputs.docker-image }}
-    - name: Upload artifacts
+    - name: Copy source package to output dir
+      shell: bash
+      run: |
+        set -eu
+        cp -r ${{ env.SOURCE_OUTPUT_DIR }}/* ${{ env.BUILD_OUTPUT_DIR }}
+    - name: Upload artefacts
       uses: actions/upload-artifact@v4
       with:
         name: ${{ env.PKG_NAME }}_${{ env.PKG_VERSION }}
