ci(go, common): Expose DEBIAN_FRONTEND as step env variable
It could have been set at more global level, but it's not relevant yet.

--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -27,14 +27,16 @@ runs:
         cache: false
     - name: Set up jq
       shell: bash
+      env:
+        DEBIAN_FRONTEND: noninteractive
       run: |
         echo "::group::Download jq"
         if [ "${{runner.os}}" = "Windows" ]; then
           winget.exe install jqlang.jq --accept-source-agreements --accept-package-agreements --silent --verbose || true
         else
           sudo --version &> /dev/null && SUDO="sudo" || SUDO=""
-          DEBIAN_FRONTEND=noninteractive $SUDO apt update
-          DEBIAN_FRONTEND=noninteractive $SUDO apt install jq
+          $SUDO apt update
+          $SUDO apt install jq
         fi
         echo "::endgroup::"
         jq --version
