--- a/gh-actions/common/build-debian/action.yml
+++ b/gh-actions/common/build-debian/action.yml
@@ -43,12 +43,14 @@ runs:
   steps:
     - name: Set up source package build
       shell: bash
+      env:
+        DEBIAN_FRONTEND: noninteractive
       run: |
         set -eu
 
         echo "::group::Install devscripts"
-        DEBIAN_FRONTEND=noninteractive sudo apt update
-        DEBIAN_FRONTEND=noninteractive sudo apt install -y devscripts
+        sudo apt update
+        sudo apt install -y devscripts
         echo "::endgroup::"
 
         echo "::group::Append commit SHA to local version"
