--- a/gh-actions/go/code-sanity/action.yaml
+++ b/gh-actions/go/code-sanity/action.yaml
@@ -34,7 +34,7 @@ runs:
         if [ "${{runner.os}}" = "Windows" ]; then
           winget.exe install jqlang.jq --accept-source-agreements --accept-package-agreements --silent --verbose || true
         else
-          sudo --version &> /dev/null && SUDO="sudo" || SUDO=""
+          SUDO=$(command -v sudo || true)
           $SUDO apt update
           $SUDO apt install jq
         fi
@@ -116,7 +116,7 @@ runs:
         # A terrible workaround for https://github.com/golangci/golangci-lint-action/issues/135
 
         # Avoid using sudo (it is unavailable in docker)
-        sudo --version &> /dev/null && SUDO="sudo" || SUDO=""
+        SUDO=$(command -v sudo || true)
 
         $SUDO chmod -R +w ../../../go/
     - name: Code formatting, vet, static checker Security…
