build-deb: Perform lintian checks on sources and binary packages

--- a/.github/workflows/test-build-deb.yaml
+++ b/.github/workflows/test-build-deb.yaml
@@ -86,4 +86,5 @@ jobs:
         with:
           source-dir: ./hello-src
           docker-image: ubuntu:devel
+          lintian: --fail-on error
           extra-source-build-deps: ''
